<?xml version="1.0" encoding="utf-8"?>
<!-- @author BlackBox @version 2.0.0 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/spacing_small"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/expansionstitle"
            android:textColor="@color/white"
            android:textSize="@dimen/font_sizem"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/expansions"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:layout_marginLeft="@dimen/spacing_xsmall"
        android:layout_marginRight="@dimen/spacing_xsmall"
        android:layout_weight="1"
        android:background="@color/silver"
        android:text="@string/standard"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:layout_marginLeft="@dimen/spacing_xsmall"
        android:layout_marginRight="@dimen/spacing_xsmall"
        android:layout_weight="1"
        android:background="@color/silver"
        android:text="@string/firstexpansion"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:layout_marginLeft="@dimen/spacing_xsmall"
        android:layout_marginRight="@dimen/spacing_xsmall"
        android:layout_weight="1"
        android:background="@color/silver"
        android:text="@string/secondexpansion"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/both"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:layout_marginLeft="@dimen/spacing_xsmall"
        android:layout_marginRight="@dimen/spacing_xsmall"
        android:layout_weight="1"
        android:background="@color/silver"
        android:text="@string/both"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/font_size" />

</LinearLayout>